Kłopoty najmana z siatka

--- a/strona/contact.html
+++ b/strona/contact.html
@@ -12,7 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.
-    min.js"></script>
+min.js"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
@@ -21,27 +21,30 @@
 </head>
 
 <body>
-    <div class="container-fluid ">
-        <nav class="navbar navbar-expand-md  menuBar">
+    <div class="container-fluid bg">
+
+        <nav class="navbar navbar-expand-md navbar-dark menuBar">
             <a class="navbar-brand" href="index.html">
-                <img src="img/122494847_684632755489809_2685132707533486605_n.png" class="logo">
+                <img src="img/122494847_684632755489809_2685132707533486605_n.png" style="max-height: 90px;">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColl"
+                aria-controls="navbarColl" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+
+            <div class="collapse navbar-collapse" id="navbarColl">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="link" href="about.html">Poznaj nas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="link" href="#">Blog</a>
-                    </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-sm-0 mx-md-3">
                         <a class="link" href="discounts.html">Zniżki</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item mx-sm-0 mx-md-3">
+                        <a class="link" href="">Blog</a>
+                    </li>
+                    <li class="nav-item mx-sm-0 mx-md-3">
+                        <a class="link" href="about.html">Poznaj nas</a>
+                    </li>
+                    <li class="nav-item mx-sm-0 mx-md-3">
                         <a class="link" href="contact.html">Kontakt</a>
                     </li>
                 </ul>
