--- a/strona/blogHomepage.html
+++ b/strona/blogHomepage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zniżki</title>
+    <title>Blog-Homepage</title>
 
     <script src="https://kit.fontawesome.com/2e3d9b3214.js" crossorigin="anonymous"></script>
 
@@ -14,13 +14,16 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.
 min.js"></script>
 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/main.css">
 
 </head>
 
 <body>
-    <div class="container-fluid bg">
-        <nav class="navbar navbar-expand-md navbar-dark menuBar">
+    <div class="container-fluid blog-bg">
+
+        <nav class="navbar navbar-expand-md navbar-light blog-menuBar">
             <a class="navbar-brand" href="index.html">
                 <img src="img/122494847_684632755489809_2685132707533486605_n.png" style="max-height: 90px;">
             </a>
@@ -48,39 +51,53 @@ min.js"></script>
             </div>
         </nav>
 
-        <div class="row header my-5">
-            <h1>Zniżki</h1>
+        <div class="row m-2 d-flex wrapper">
+            <div class="col-lg-7 p-0 mr-2 d-flex flex-column column1">
+                <div class="row d-flex no-gutters row1">
+                    <div class="col  mr-2 col1">
+                    </div>
+                    <div class="col d-flex flex-column p-0 col2">
+                        <div class="col mb-2 p-0 col3"></div>
+                        <div class="col p-0 col4"></div>
+                    </div>
+                </div>
+                <div class="row mt-2 no-gutters row2"></div>
+            </div>
+            <div class="col-lg-5 p-0 d-flex flex-column column2">
+                <div class="col p-0 d-flex row3">
+                    <div class="col mr-2 p-0 col5"></div>
+                    <div class="col p-0 col6"></div>
+                </div>
+                <div class="col mt-2 p-0 row4"></div>
+            </div>
         </div>
-        <section class="discounts">
 
-            <div class="row m-lg-5 ">
-                <div class="col-lg-4 mb-4">
-                    <div class="image hardrock"></div>
+        <div class="row no-gutters  p-0 wraperMobile">
+            <div class="col m-2">
+                <div class="div article ">
+                    <div class="yellowbar"></div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="image starbucks"></div>
+                <div class="div feuilleton ">
+                    <div class="yellowbar"></div>
                 </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="image gym"></div>
+                <div class="div interviews ">
+                    <div class="yellowbar"></div>
+                </div>
+                <div class="div review ">
+                    <div class="yellowbar"></div>
+                </div>
+                <div class="div story ">
+                    <div class="yellowbar"></div>
+                </div>
+                <div class="div poetryCorner">
+                    <div class="yellowbar"></div>
+                </div>
+                <div class="div">
+                    <div class="yellowbar"></div>
                 </div>
             </div>
+        </div>
 
-
-            <div class="row m-lg-5">
-                <div class="col-lg-4 mb-4">
-                    <div class="image restaurant"></div>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="image restaurant2"></div>
-                </div>
-                <div class="col-lg-4 mb-4">
-                    <div class="image club"></div>
-                </div>
-            </div>
-        </section>
-        <footer>
-            <p>Copyright &copy; 2020 SU XLII Lo Kraków </p>
-        </footer>
     </div>
 </body>
 
