--- a/strona/poetryCorner.html
+++ b/strona/poetryCorner.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog-Homepage</title>
+    <title>Blog-kącik poetycki</title>
 
     <script src="https://kit.fontawesome.com/2e3d9b3214.js" crossorigin="anonymous"></script>
 
@@ -62,10 +62,8 @@ min.js"></script>
                 <span class="burger__bars"></span>
             </div>
         </div>
-
-
         <div class="row m-4">
-            <h1 class="blogH1">Strona główna</h1>
+            <h1 class="blogH1">Blog - kącik poetycki</h1>
         </div>
 
         <div class="row no-gutters wrapperDesktop" style="height: calc(100vh - 12.5vh - 10px); margin: 5px;">
@@ -73,50 +71,41 @@ min.js"></script>
                 <div class="row no-gutters " style="height:60%">
                     <!-- height-60 -->
                     <div class="col-xl-6">
-                        <a href="articles.html">
-                            <div class="article"
-                                style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
-                                <div class="yellowbar">
-                                    <p>Artykuły</p>
-                                </div>
+                        <div class="article" style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
+                            <div class="yellowbar">
+                                <p></p>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-xl-6">
                         <div class="row no-gutters" style="height:50%;">
                             <!-- height-50 -->
                             <div class="col-xl-12 h-100">
-                                <a href="felietons.html">
-                                    <div class="interview"
-                                        style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
-                                        <div class="yellowbar">
-                                            <p>Felietony</p>
-                                        </div>
+                                <div class="interview"
+                                    style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
+                                    <div class="yellowbar">
+                                        <p></p>
                                     </div>
-                                </a>
+                                </div>
                             </div>
                             <div class="col-xl-12 h-100">
-                                <a href="interviews.html">
-                                    <div class="feuilleton"
-                                        style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
-                                        <div class="yellowbar">
-                                            <p>Wywiady</p>
-                                        </div>
+                                <div class="feuilleton"
+                                    style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
+                                    <div class="yellowbar">
+                                        <p></p>
                                     </div>
-                                </a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row no-gutters" style="height:40%;">
                     <!-- height-40 -->
-                    <a href="reviews.html">
-                        <div class="story " style="margin: 5px;  height: calc(100% - 10px); width: calc(100% - 10px);">
-                            <div class="yellowbar">
-                                <p>Recenzje</p>
-                            </div>
+                    <div class="story " style="margin: 5px;  height: calc(100% - 10px); width: calc(100% - 10px);">
+                        <div class="yellowbar">
+                            <p></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
 
@@ -124,84 +113,67 @@ min.js"></script>
                 <div class="row no-gutters" style="height:50%;">
                     <!-- height-50 -->
                     <div class="col-xl-6 h-100">
-                        <a href="stories.html">
-                            <div class="review"
-                                style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
-                                <div class="yellowbar">
-                                    <p>Opowiadania</p>
-                                </div>
+                        <div class="review" style="margin: 5px; height: calc(100% - 10px); width: calc(100% - 10px);">
+                            <div class="yellowbar">
+                                <p></p>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <div class="col-xl-6 h-100">
                         <div style="margin: 5px;  height: calc(100% - 10px); width: calc(100% - 10px);">
                             <div class="yellowbar">
-                                <p>W sumie nie wiem</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="row no-gutters" style="height:50%;">
                     <!--height-50 -->
-                    <a href="poetryCorner.html">
-                        <div class="poetryCorner"
-                            style="margin: 5px;  height: calc(100% - 10px); width: calc(100% - 10px);">
-                            <div class="yellowbar">
-                                <p>Kącik poetycki</p>
-                            </div>
+                    <div class="poetryCorner"
+                        style="margin: 5px;  height: calc(100% - 10px); width: calc(100% - 10px);">
+                        <div class="yellowbar">
+                            <p></p>
                         </div>
-                    </a>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="row no-gutters  p-0 wrapperMobile">
             <div class="col mx-2 mb-2">
-                <a href="articles.html">
-                    <div class="div mb-2 article ">
-                        <div class="yellowbar">
-                            <p>Artykuły</p>
-                        </div>
+                <div class="div mb-2 article ">
+                    <div class="yellowbar">
+                        <p></p>
                     </div>
-                </a>
-                <a href="felietons.html">
-                    <div class="div  mb-2 feuilleton ">
-                        <div class="yellowbar">
-                            <p>Felietony</p>
-                        </div>
+                </div>
+                <div class="div  mb-2 feuilleton ">
+                    <div class="yellowbar">
+                        <p>Felietony</p>
                     </div>
-                </a>
-                <a href="interviews.html">
-                    <div class="div mb-2 interview ">
-                        <div class="yellowbar">
-                            <p>Wywiady</p>
-                        </div>
+                </div>
+                <div class="div mb-2 interview ">
+                    <div class="yellowbar">
+                        <p></p>
                     </div>
-                </a>
-                <a href="reviews.html">
-                    <div class="div mb-2 review ">
-                        <div class="yellowbar">
-                            <p>Recenzje</p>
-                        </div>
+                </div>
+                <div class="div mb-2 review ">
+                    <div class="yellowbar">
+                        <p></p>
                     </div>
-                </a>
-                <a href="stories.html">
-                    <div class="div  mb-2 story ">
-                        <div class="yellowbar">
-                            <p>Opowiadania</p>
-                        </div>
+                </div>
+                <div class="div  mb-2 story ">
+                    <div class="yellowbar">
+                        <p></p>
                     </div>
-                </a>
-                <a href="poetryCorner.html">
-                    <div class="div mb-2 poetryCorner">
-                        <div class="yellowbar">
-                            <p>Kącik poetycki</p>
-                        </div>
+                </div>
+                <div class="div mb-2 poetryCorner">
+                    <div class="yellowbar">
+                        <p></p>
                     </div>
-                </a>
+                </div>
                 <div class="div">
                     <div class="yellowbar">
-                        <p>W sumie nie wiem</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
