--- a/strona3/about.html
+++ b/strona3/about.html
@@ -200,13 +200,13 @@ min.js"></script>
                 </div>
                 <div class="col-sm-12 col-xl-6 mb-4">
                     <div class="text d-flex flex-column justify-content-around rounded">
-                        <h1>Front-end developer</h1>
+                        <h1>Twórca strony </h1>
                         <h2>Bartosz Sosin</h2>
                         <p>
                             Jeśli już mówimy o stronie samorządu, nie powstałaby ona gdyby nie niesamowite zaangażowanie
                             i pracowitość Bartosza Sosina. Ten młody programista pracuje z pasją i determinacją, a owoce
                             jego kodowania możecie oglądać teraz na własne oczy. Poza programowaniem, które jest jego
-                            niezwykłą pasją, Bartek bardzo lubi muzykę, książki, gry kopmuterowe i sport, szczególnie
+                            niezwykłą pasją. Bartek bardzo lubi muzykę, książki, gry kopmuterowe i sport, szczególnie
                             piłkę nożną, z którą był związany przez ponad połowe życia. Jest osobą towarzyską i
                             wytrwałą, więc bez problemu odnajduje się w
                             strukturach naszej szkoły.
