--- a/strona3/about.html
+++ b/strona3/about.html
@@ -277,7 +277,7 @@ min.js"></script>
             <p class="ml-2">Copyright &copy; 2020 SU XLII Lo Kraków </p>
             <div class="iconbox mr-2">
                 <a class="mr-3" href="https://www.instagram.com/su_42lo/"><i class="fab fa-instagram"></i></a>
-                <a class="mr-3" href="https://www.facebook.com/groups/499859403913734"><i
+                <a class="mr-3" href="https://www.facebook.com/lo42krakow"><i
                         class="fab fa-facebook-f"></i></a>
             </div>
         </footer>
