--- a/strona3/index.html
+++ b/strona3/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="bar">
             <a href="https://www.instagram.com/su_42lo/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/groups/499859403913734"><i class="fab fa-facebook-f"></i></a>
+              <a class="mr-3" href="https://www.facebook.com/lo42krakow"><i class="fab fa-facebook-f"></i></a>
         </div>
         <footer class="footerHomepage">
             <p>Copyright &copy; 2020 SU XLII Lo Kraków </p>
